--- a/proof.tex
+++ b/proof.tex
@@ -1,7 +1,7 @@
 % @Author: WU Zihan
 % @Date:   2022-10-31 23:51:45
 % @Last Modified by:   WU Zihan
-% @Last Modified time: 2022-11-01 02:01:13
+% @Last Modified time: 2022-11-01 02:13:02
 \documentclass{article}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -136,6 +136,6 @@ $$
 From Theorem \ref{theorem:1}, we can calculate the critical point set of $H$ to get the critical point set of $h$.
 
 \bibliographystyle{IEEEtran}
-\bibliography{../mybib/mybibtex}
+\bibliography{mybib}
 
 \end{document}
